# S3-database-backup

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: build.yml  deploy.yml
src/: main.rs
