[package]
name = "database-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
aws-config = "0.56"
aws-sdk-s3 = "0.29.0"
tokio = { version = "1", features = ["full"] }
#itertools = "0.11.0"
url = "2.4"
chrono = "0.4"
envconfig = "0.10"
